--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: elixir
 
-opt_release:
-  - 19.1
-  - 20.0
-  - 21.0
-
-elixir:
-  - 1.4.5
-  - 1.5.0
-  - 1.6.0
+matrix:
+  include:
+    - elixir: '1.4.5'
+      opt_release: '19.3'
+    - elixir: '1.5'
+      opt_release: '20.0'
+    - elixir: '1.6'
+      opt_release: '20.0'
+    - elixir: '1.7'
+      opt_release: '21.0'
 
 sudo: false
