--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ language: elixir
 matrix:
   include:
     - elixir: '1.4.5'
-      opt_release: '19.3'
+      otp_release: '19.3'
     - elixir: '1.5'
-      opt_release: '20.0'
+      otp_release: '20.0'
     - elixir: '1.6'
-      opt_release: '20.0'
+      otp_release: '20.0'
     - elixir: '1.7'
-      opt_release: '21.0'
+      otp_release: '21.0'
     - elixir: '1.8'
-      opt_release: '21.0'
+      otp_release: '21.0'
 
 sudo: false
