ci: use erlef/setup-beam

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-beam@v1
       with:
         elixir-version: ${{ matrix.pair.elixir-version }}
         otp-version: ${{ matrix.pair.otp-version }}
