ci: use erlef/setup-beam (#41)
* ci: use erlef/setup-beam

* update elixir version

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,8 +13,6 @@ jobs:
       fail-fast: false
       matrix:
         pair:
-          - otp-version: '19'
-            elixir-version: '1.4'
           - otp-version: '20'
             elixir-version: '1.5'
           - otp-version: '20'
@@ -29,11 +27,13 @@ jobs:
             elixir-version: '1.10'
           - otp-version: '23'
             elixir-version: '1.11'
+          - otp-version: '24'
+            elixir-version: '1.12'
 
     steps:
     - uses: actions/checkout@v2
     - name: Setup elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-beam@v1
       with:
         elixir-version: ${{ matrix.pair.elixir-version }}
         otp-version: ${{ matrix.pair.otp-version }}
